[package]
name = "avr-robot"
version = "1.1.0"
authors = ["Jacob Rizzo <jacob@rizz.ooo>"]
edition = "2021"

[[bin]]
name = "avr-robot"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0"
motor-shield = { path = "./motor-shield"}

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "45a37eb746d264166c3ea382fed323a204104998"
features = ["arduino-uno"]

[workspace]

members = [
    "motor-shield"
]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
